syntax="proto3";

option go_package = "./proto";

package greet_service

service GreetService{
    rpc SayHello(NoParam) returns (HelloResponse);

    rpc SayHelloServerSideStreaming(NamesList) returns (stream HelloResponse);

    rpc SayHelloClientSideStreaming(stream HelloRequest) returns (MessageList);

    rpc SayHelloBidirectionalStraming(stream HelloRequest) returns (stream HelloResponse)
}

message NoParam{}

message HelloResponse{
    string message=1;
}

message HelloRequest{
    string message=1;
}

message NamesList{
    repeated string names=1;
}

message MessageList{
    repeated string messages=1;
}

